--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    max-height: 100vh;
+    background-color: transparent;
 }
 
 .curved-background {
