--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 .curved-background {
     width: 100%;
     height: 35vh;
-    background-color: #1d86d7;
+    background-color: #d71d1d;
     border-bottom-left-radius: 3% 3%;
     border-bottom-right-radius: 3% 3%;
     display: grid;
