--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
-    max-height: 100vh;
-    background-color: transparent;
 }
 
 .curved-background {
     width: 100%;
     height: 35vh;
-    background-color: #d71d1d;
+    background-color: #1d86d7;
     border-bottom-left-radius: 3% 3%;
     border-bottom-right-radius: 3% 3%;
     display: grid;
