Added color config option

--- a/css/color.css
+++ b/css/color.css
@@ -7,14 +7,17 @@
     --stripthree: #f764d9;
 }
 
-/* grayish-green #61ae63  */
-/* light purple #c488c4  */
-/* purple #bb89bd */
-/* green #63ad61 */
-/* French Blue #3683f6 */
-/* Dark Gray #a1a1a1  */
-/*  gray #979797 */
-/* another light pink #f7c7cf */
-/* Light Thulian Pink #f6c7cf  */
-/* yellow #f6d836 */
+
+/* PASS COLOR */
+/* green-1 #63ad61 */
+/* green-2 #61ae63  */
+/* purple-1 #bb89bd */
+/* purple-2 #c488c4  */
 /* red #f65d5d */
+/* gray-1 #979797 */
+/* gray-2 #a1a1a1  */
+/* yellow #f6d836 */
+/* blue-1 #3683f6 */
+/* blue-2 #3683f6 */
+/* pink-1 #f7c7cf */
+/* pink-2 #f6c7cf  */
